# int-conv

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  flake.nix  shell.nix
src/: convert.c  convert.cpp  convert.h  main.cpp  settings.cpp  settings.h  stdvar.h
src/i18n/: i18n.cpp  i18n.h
